--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,7 @@
 :root {
-    --primary-color: #BBDBF7;
-    --secondary-color: #64ABE3;
-    --tertiary-color:  #C2B280;
+    --primary-color: #289aa9;
+    --secondary-color: #fbdc5c;
+    --tertiary-color:  #795e42;
 }
 
 * {
@@ -82,10 +82,6 @@ header nav ul li a {
 
 .section-start {
     border-bottom: 3px solid var(--tertiary-color);
-    display: flex;
-}
-
-.section-title{
     background-color: var(--primary-color);
     width: 100%;
     padding: 20px;
@@ -93,7 +89,7 @@ header nav ul li a {
     align-items: center;
 }
 
-.section-title h2 {
+.section-start h2 {
     font-size: 50px;
     padding: 0 15px 0 0;
 }
@@ -103,14 +99,50 @@ header nav ul li a {
 
 }   
 
-.work-img img {
+.section-me p {
+    font-size: 20px;
+}
+
+.section-work img {
     border: 2px solid var(--secondary-color);
     width: 350px;
     height: 350px;
     object-fit: cover;
 }
 
-.section-title address {
-    display: flex;
+
+.section-contact p {
+    padding: 30px;
+    font-size: 20px;
 }
 
+.section-contact a {
+    padding: 30px;
+    font-size: 20px;
+    text-decoration: none;
+    color: var(--tertiary-color)
+}
+
+/* Media Query */
+
+@media screen and (max-width: 980px) {
+    header {
+      padding-bottom: 0;
+      justify-content: center;
+      position: relative;
+    }
+  
+    header h1 {
+      width: 100%;
+      text-align: center;
+    }
+  
+    header nav ul {
+      margin-top: 20px;
+      width: 100%;
+      justify-content: center;
+    }
+  
+    header nav ul li a {
+      font-size: 20px;
+    }
